worked on responsive layout for gallery page

--- a/portfolio/static/css/components/_containers.scss
+++ b/portfolio/static/css/components/_containers.scss
@@ -1,17 +1,23 @@
 body {
-  //background: #fff8fb;
   background-size: 4px 4px;
   background-image: linear-gradient(-45deg, #fde0e0 25%, transparent 25%, transparent 50%, #fde0e0 50%, #fde0e0 38%, transparent 48%, transparent);
+}
+
+[class*="col-"] {
+  padding: 10px;
+}
+
+.row {
+  padding: 10px 0;
+}
+
+#content {
+  padding: 20px 20px 0 20px;
 }
 
 #container {
   background-image: linear-gradient(180deg, white, transparent);
   height: 100%;
-}
-.content {
-  padding: 20px 20px 0 20px;
-  overflow-y: scroll;
-  //background: linear-gradient($pink, white)
 }
 
 .text-container {
@@ -79,20 +85,14 @@ body {
   padding: 0 50px 50px 50px;
 
   .row {
-    margin-top: 30px;
-
     &:nth-child(1) {
       margin-top: 10px;
     }
   }
 
   @media screen and (max-width: 768px) {
-    .col-sm-4 {
-      margin-bottom: 20px;
-
-      .sub-container {
-        background-position: 0;
-      }
+    .sub-container {
+      background-position: 0;
     }
   }
 }
@@ -104,7 +104,7 @@ body {
   position: absolute;
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: -325px -80px;
+  background-position: -325px;
   top: 0;
   left: 0;
 }
@@ -122,20 +122,19 @@ body {
 
   &:hover {
     .sub-container {
-      background-position: 0px -80px;
+      background-position: 0px;
     }
   }
 }
 
 .object-title-container {
-  left: 20px;
+  left: 25px;
   margin: 0 20px;
   transform: translateY(-50%);
 }
 
 .summary-container {
   padding: 20px;
-  margin-bottom: 50px;
   background: white;
   border-radius: 6px;
   border: 1px solid darkblue;
@@ -156,6 +155,15 @@ body {
   text-align: center;
   margin: 30px 0;
 
+  .row {
+    padding: 0;
+  }
+
+  [class*="col-"] {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
   .squiggle-container {
     margin: 0 0 0 auto;
   }
@@ -168,7 +176,7 @@ body {
 }
 
 .block-title-container {
-  color: #f05f5b;
+  color: $pink;
   background: white;
   text-align: left;
   font-size: 12px;
@@ -179,12 +187,12 @@ body {
   position: relative;
 
   .row {
-    margin: 0 120px 30px 120px;
+    margin: 0 120px;
   }
 
   @media screen and (max-width: 992px) {
     .row {
-      margin: 0 40px 30px 40px;
+      margin: 0 40px;
     }
   }
 
@@ -199,10 +207,6 @@ body {
     background: white;
     padding: 10px;
     position: relative;
-
-    &.no-padding {
-      padding: 0;
-    }
   }
 }
 
@@ -224,18 +228,6 @@ body {
     z-index: 5;
     position: absolute;
     width: 100%;
-  }
-}
-
-@media screen and (max-width: 768px){
- .detail-image-container .image-container {
-    margin-top: 20px;
-  }
-}
-
-.col-sm-12 {
-  .image-container {
-    margin-top: 20px;
   }
 }
 
