--- a/portfolio/static/css/components/_text.scss
+++ b/portfolio/static/css/components/_text.scss
@@ -1,3 +1,7 @@
+p {
+  font-family: 'Overpass';
+}
+
 .subtitle {
   color: $pink;
   text-transform: uppercase;
@@ -61,7 +65,6 @@ a {
 
 .desc {
   font-size: 9px;
-  font-family: 'Overpass-italic';
   text-transform: none;
   margin: 0;
   color: black;
@@ -78,7 +81,6 @@ a {
 
 .quote-container > p {
   color: $pink;
-  font-family: 'Overpass';
   font-style: italic;
   font-weight: 300;
   font-size: 20px;
@@ -87,7 +89,6 @@ a {
 .block-title-container {
   p{
     margin: 0;
-    font-family: 'Overpass';
   }
 
   .number {
