--- a/portfolio/static/css/components/_containers.scss
+++ b/portfolio/static/css/components/_containers.scss
@@ -1,8 +1,9 @@
 body {
   background-size: 4px 4px;
   background-image: linear-gradient(-45deg, #fde0e0 25%, transparent 25%, transparent 50%, #fde0e0 50%, #fde0e0 38%, transparent 48%, transparent);
-  background-image: -webkit-gradient(-45deg, #fde0e0 25%, transparent 25%, transparent 50%, #fde0e0 50%, #fde0e0 38%, transparent 48%, transparent);
+  background-image: -webkit-linear-gradient(-45deg, #fde0e0 25%, transparent 25%, transparent 50%, #fde0e0 50%, #fde0e0 38%, transparent 48%, transparent);
   background-image: -moz-linear-gradient(-45deg, #fde0e0 25%, transparent 25%, transparent 50%, #fde0e0 50%, #fde0e0 38%, transparent 48%, transparent);
+  font-family: 'Overpass';
 }
 
 [class*="col-"] {
