--- a/portfolio/static/css/portfolio.css
+++ b/portfolio/static/css/portfolio.css
@@ -1,94 +1,518 @@
-/*
-Error: Invalid CSS after ".": expected class name, was ".form-container"
-        on line 21 of components/_mobile_styles.scss
-        from line 8 of portfolio.scss
+@keyframes shift {
+  from {
+    transform: translateX(-10%); }
+  to {
+    transform: translateX(-40%); } }
+@keyframes vertshift {
+  from {
+    transform: translateY(-10%); }
+  to {
+    transform: translateY(-40%); } }
+@keyframes shiftTop {
+  50% {
+    -webkit-transform: translateY(4px);
+    transform: translateY(4px); } }
+.custom-fade {
+  opacity: 0;
+  transition: all 1s ease-in; }
 
-Backtrace:
-components/_mobile_styles.scss:21
-portfolio.scss:8
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:1189:in `expected'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:1125:in `expected'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:1120:in `tok!'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/scss/static_parser.rb:190:in `class_selector'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/scss/static_parser.rb:152:in `simple_selector_sequence'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/scss/static_parser.rb:111:in `selector'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/scss/static_parser.rb:86:in `selector_comma_sequence'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:1103:in `expr!'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/scss/static_parser.rb:20:in `parse_selector'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:427:in `visit_rule'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `block in visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `block in with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:115:in `with_frame'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:433:in `block (2 levels) in visit_rule'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:433:in `map'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:433:in `block in visit_rule'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:181:in `with_environment'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:431:in `visit_rule'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `block in visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `block in with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:115:in `with_frame'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `map'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:169:in `block in visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:181:in `with_environment'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:168:in `visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:515:in `visit_media'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `block in visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `block in with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:115:in `with_frame'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:328:in `block (2 levels) in visit_import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:328:in `map'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:328:in `block in visit_import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:88:in `block in with_import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:115:in `with_frame'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:88:in `with_import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:325:in `visit_import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `block in visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `block in with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:115:in `with_frame'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `map'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:169:in `block in visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:181:in `with_environment'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:168:in `visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:188:in `visit_root'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:159:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:8:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/root_node.rb:36:in `css_tree'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/engine.rb:381:in `_render_with_sourcemap'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/engine.rb:298:in `render_with_sourcemap'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:492:in `update_stylesheet'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:209:in `each'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin.rb:82:in `update_stylesheets'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/exec/sass_scss.rb:340:in `watch_or_update'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/exec/sass_scss.rb:51:in `process_result'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/exec/base.rb:52:in `parse'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/exec/base.rb:19:in `parse!'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/bin/scss:13:in `<top (required)>'
-/usr/local/bin/scss:23:in `load'
-/usr/local/bin/scss:23:in `<main>'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: Invalid CSS after \".\": expected class name, was \".form-container\"\A         on line 21 of components/_mobile_styles.scss\A         from line 8 of portfolio.scss"; }
+.custom-fade--inViewport {
+  opacity: 1; }
+
+@keyframes Move {
+  0% {
+    transform: translate(15px, -10px); }
+  50% {
+    transform: translate(15px, -20px); }
+  100% {
+    transform: translate(15px, -10px); } }
+.nav-list {
+  padding: 30px 50px 8px 50px;
+  margin-bottom: 0; }
+  .nav-list li {
+    list-style: none;
+    display: inline;
+    text-transform: uppercase;
+    padding: 0 20px;
+    font-family: 'Overpass', sans-serif; }
+    .nav-list li:active, .nav-list li :hover, .nav-list li :visited, .nav-list li :focus {
+      text-decoration: none; }
+    .nav-list li a {
+      color: #f05f5b; }
+      .nav-list li a:active, .nav-list li a :hover, .nav-list li a :visited, .nav-list li a :focus {
+        text-decoration: none; }
+
+.nav-link.roulette {
+  position: absolute;
+  right: 0;
+  top: 23px; }
+
+body {
+  background-size: 4px 4px;
+  background-image: linear-gradient(-45deg, #fde0e0 25%, transparent 25%, transparent 50%, #fde0e0 50%, #fde0e0 38%, transparent 48%, transparent);
+  background-image: -webkit-linear-gradient(-45deg, #fde0e0 25%, white 25%, white 50%, #fde0e0 50%, #fde0e0 38%, white 48%, white);
+  background-image: -moz-linear-gradient(-45deg, #fde0e0 25%, transparent 25%, transparent 50%, #fde0e0 50%, #fde0e0 38%, transparent 48%, transparent);
+  font-family: 'Overpass'; }
+
+[class*="col-"] {
+  padding: 10px; }
+
+.row {
+  padding: 10px 0; }
+
+#content {
+  padding: 20px 20px 0 20px; }
+
+#container {
+  background-image: linear-gradient(180deg, white, rgba(255, 255, 255, 0));
+  background-image: -webkit-linear-gradient(top, white 0%, rgba(255, 255, 255, 0) 100%);
+  background-image: -moz-linear-gradient(180deg, white, rgba(255, 255, 255, 0));
+  height: 100%; }
+
+.text-container {
+  display: inline-block;
+  padding: 20px;
+  text-align: left;
+  background: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
+
+.image-container {
+  background-size: cover;
+  display: block;
+  text-align: center;
+  position: relative;
+  height: 400px;
+  border: 1px solid darkblue; }
+  .image-container .button-container {
+    padding-top: 150px; }
+
+.selection-container {
+  position: absolute; }
+
+.title-container {
+  position: absolute;
+  top: -17px;
+  right: 7px;
+  background: #fff8fb;
+  padding: 5px;
+  border-radius: 4px;
+  z-index: 1;
+  border: 1px solid darkblue; }
+  .title-container p {
+    font-size: 10px;
+    margin-bottom: 0; }
+
+.squiggle-container {
+  width: 100px; }
+
+.form-container {
+  position: absolute;
+  width: 94%;
+  top: 130px;
+  text-align: center; }
+
+.submit-button-container {
+  display: block;
+  text-align: right; }
+
+#gallery-container {
+  padding: 0 50px 50px 50px; }
+  #gallery-container .row:nth-child(1) {
+    margin-top: 10px; }
+  @media screen and (max-width: 768px) {
+    #gallery-container .sub-container {
+      background-position: 0; } }
+
+.sub-container {
+  transition: background-position 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: -325px;
+  top: 0;
+  left: 0; }
+
+.object-container {
+  padding: 100px 30px;
+  text-align: center;
+  font-family: 'Overpass';
+  border: 1px solid darkblue;
+  position: relative; }
+  .object-container .squiggle-container {
+    margin: -12px auto; }
+  .object-container:hover .sub-container {
+    background-position: 0px; }
+
+.object-title-container {
+  left: 25px;
+  margin: 0 20px;
+  transform: translateY(-50%); }
+
+.summary-container {
+  padding: 20px;
+  background: white;
+  border-radius: 6px;
+  border: 1px solid darkblue;
+  text-align: left; }
+  .summary-container p {
+    margin-bottom: 0; }
+
+.jumbo-image-container {
+  position: relative;
+  padding: 30px;
+  min-height: 200px; }
+
+.jumbo-container {
+  text-align: center;
+  margin: 30px 0; }
+  .jumbo-container .row {
+    padding: 0; }
+  .jumbo-container [class*="col-"] {
+    padding-top: 0;
+    padding-bottom: 0; }
+  .jumbo-container .squiggle-container {
+    margin: 0 0 0 auto; }
+
+.vertical-align {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap; }
+
+.block-title-container {
+  color: #f05f5b;
+  background: white;
+  text-align: left;
+  font-size: 12px; }
+
+.detail-image-container {
+  padding: 40px 0;
+  position: relative; }
+  .detail-image-container .row {
+    margin: 0 120px; }
+  @media screen and (max-width: 992px) {
+    .detail-image-container .row {
+      margin: 0 40px; } }
+  .detail-image-container .squiggle-container {
+    position: absolute;
+    top: 34%;
+    left: 17%; }
+  .detail-image-container .image-container {
+    height: auto;
+    background: white;
+    padding: 10px;
+    position: relative; }
+
+.browser-window {
+  border: 1px solid darkblue;
+  position: relative; }
+  .browser-window img {
+    position: relative;
+    z-index: 3;
+    margin-top: 15px; }
+  .browser-window .browser-bar {
+    height: 15px;
+    background: white;
+    border-bottom: 1px solid #ececec;
+    padding: 0 5px;
+    z-index: 5;
+    position: absolute;
+    width: 100%; }
+
+#carousel-container {
+  min-height: 200px; }
+
+@media only screen and (max-width: 480px) {
+  .nav-list {
+    padding: 30px 0; }
+
+  #about-container .text-container {
+    padding: 30px;
+    width: 300px; }
+
+  .title-container {
+    font-size: 14px; }
+
+  #contact-container .image-container {
+    background-position: -100; }
+  #contact-container .section {
+    background-position: -102px -1px; }
+  #contact-container .form-container {
+    top: 94px; } }
+form {
+  margin-bottom: 0;
+  position: relative;
+  display: inline-block; }
+  form p {
+    text-transform: uppercase;
+    color: white;
+    text-align: left;
+    position: absolute;
+    right: 0%;
+    top: -26px;
+    width: 100%; }
+  form ::placeholder {
+    color: #bcbcbc;
+    font-size: 10px; }
+  form.front {
+    z-index: 4;
+    transition: all 1s ease-in; }
+
+.form-group {
+  width: 150px; }
+
+textarea.form-control, .form-group > input.form-control {
+  font-weight: 100;
+  font-size: 12px;
+  padding: 10px;
+  border-radius: 4px;
+  display: block;
+  border: none;
+  background-color: #f7f8ff;
+  font-family: 'Overpass';
+  width: 150px; }
+
+.success-message, .error-message {
+  display: none;
+  background: #fff8fb;
+  margin-top: 10px;
+  padding: 5px;
+  border-radius: 4px;
+  font-size: 10px;
+  font-family: 'Overpass';
+  border: 1px solid darkblue; }
+
+.button {
+  background: #f05f5b;
+  border-radius: 4px;
+  color: white;
+  border: none;
+  padding: 7px 10px;
+  text-transform: uppercase;
+  font-family: 'Overpass';
+  font-size: 12px; }
+  .button.submit-button {
+    margin-top: 10px;
+    text-transform: uppercase;
+    padding: 5px 10px;
+    z-index: 1000; }
+  .button.next-button {
+    position: absolute;
+    right: 28px;
+    bottom: 20px;
+    z-index: 4; }
+  .button.back-button {
+    z-index: 4;
+    position: absolute;
+    left: 28px;
+    bottom: 20px; }
+  .button.roulette {
+    float: right; }
+
+.carousel-control.right, .carousel-control.left {
+  background-image: none;
+  opacity: 1; }
+
+.section {
+  background-size: cover;
+  height: 400px;
+  width: 100%;
+  position: absolute;
+  z-index: 1; }
+
+img.display {
+  width: 100%; }
+
+.rotate {
+  width: 30px;
+  height: 30px;
+  border: 1px solid #f1c3c2;
+  position: absolute;
+  top: 30%;
+  right: 10%; }
+
+.jumbo-container .circle:nth-child(2) {
+  left: 20%; }
+
+.circle {
+  width: 10px;
+  height: 10px;
+  border: 1px solid #f1c3c2;
+  -moz-border-radius: 50px;
+  -webkit-border-radius: 50px;
+  border-radius: 50px;
+  position: absolute;
+  top: 50%;
+  right: 10%; }
+
+.shapes .rotate:nth-child(2) {
+  height: 60px;
+  width: 60px;
+  left: 19%;
+  top: 60%; }
+.shapes .circle {
+  width: 20px;
+  height: 20px;
+  border: 1px solid #f1c3c2;
+  -moz-border-radius: 50px;
+  -webkit-border-radius: 50px;
+  border-radius: 50px;
+  position: absolute;
+  animation: MoveUpDown 6s cubic-bezier(0.4, 0, 1, 1) infinite; }
+
+.triangle {
+  width: 0;
+  height: 0;
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+  border-bottom: 20px solid #f1c3c2;
+  position: absolute;
+  left: 35%; }
+
+@keyframes MoveUpDown {
+  0% {
+    bottom: -10px; }
+  50% {
+    bottom: -20px; }
+  100% {
+    bottom: -10px; } }
+#ta-detail-page .small-circle {
+  width: 8px;
+  height: 8px;
+  -moz-border-radius: 8px;
+  -webkit-border-radius: 8px;
+  border-radius: 8px;
+  display: inline-block;
+  margin: 3px; }
+  #ta-detail-page .small-circle.red {
+    background-color: #ff6d6f; }
+  #ta-detail-page .small-circle.yellow {
+    background-color: #fff18a; }
+  #ta-detail-page .small-circle.green {
+    background-color: #90e585; }
+#ta-detail-page .browser-shadow {
+  position: absolute;
+  left: -10px;
+  top: 10px;
+  height: 100%;
+  width: 100%;
+  border: 1px solid #f05f5b; }
+
+.line {
+  border-top: 1px solid darkblue;
+  position: absolute;
+  top: 0;
+  width: 50%;
+  left: 25%; }
+
+.small-line {
+  width: 30px;
+  height: 1px;
+  background-color: #f05f5b;
+  margin-bottom: 10px; }
+
+.vert-line {
+  width: 1px;
+  height: 100px;
+  position: absolute;
+  background: #f05f68;
+  left: -30px;
+  top: -6px; }
+
+img.circle-text.rotate {
+  position: absolute;
+  top: 10px;
+  right: 0;
+  border: none;
+  height: 100px;
+  width: 100px; }
+
+.jumbo-image-container > img {
+  position: absolute;
+  height: 275px;
+  left: 90px;
+  animation: Move 5s cubic-bezier(0.39, 0.58, 0.57, 1) infinite; }
+
+#illustrations-detail-page .image-container:nth-child(2) {
+  margin-top: 20px; }
+
+p {
+  font-family: 'Overpass'; }
+
+.subtitle {
+  color: #f05f5b;
+  text-transform: uppercase;
+  font-size: 10px;
+  position: absolute;
+  top: 50%;
+  margin: 0; }
+  .subtitle.right {
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+    right: 0; }
+  .subtitle.left {
+    -webkit-transform: rotate(-90deg);
+    -moz-transform: rotate(-90deg);
+    -o-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    transform: rotate(-90deg);
+    left: 0; }
+
+.header {
+  text-align: left;
+  text-transform: uppercase;
+  margin-bottom: -15px; }
+
+.detail-header {
+  text-align: left;
+  line-height: 1;
+  color: #f05f5b;
+  padding-left: 15%;
+  font-family: 'Overpass';
+  font-size: 52px; }
+  .detail-header.dark {
+    color: darkblue; }
+
+a {
+  color: black; }
+  a:hover {
+    color: black; }
+
+.object-title {
+  font-size: 18px;
+  text-transform: uppercase;
+  color: #f05f5b;
+  max-width: 200px; }
+
+.desc {
+  font-size: 9px;
+  text-transform: none;
+  margin: 0;
+  color: black; }
+
+.section-title p {
+  position: absolute;
+  left: -60px;
+  top: -35px;
+  color: #f05f5b; }
+
+.quote-container > p {
+  color: #f05f5b;
+  font-style: italic;
+  font-weight: 300;
+  font-size: 20px; }
+
+.block-title-container p {
+  margin: 0; }
+.block-title-container .number {
+  border-bottom: 1px solid #f05f5b;
+  margin-bottom: 5px; }
+
+/*# sourceMappingURL=portfolio.css.map */
