added first roulette image files and data

--- a/portfolio/static/css/components/_buttons.scss
+++ b/portfolio/static/css/components/_buttons.scss
@@ -37,4 +37,9 @@
 .carousel-control.right, .carousel-control.left {
   background-image: none;
   opacity: 1;
+  display: inline-block;
+}
+
+#roulette-button {
+  margin-bottom: 20px;
 }
