--- a/portfolio/static/css/components/_images.scss
+++ b/portfolio/static/css/components/_images.scss
@@ -155,3 +155,7 @@ img.circle-text.rotate {
 #illustrations-detail-page .image-container:nth-child(2) {
   margin-top: 20px;
 }
+
+.alternate-roulette {
+  margin-top: 20px;
+}
