--- a/portfolio/static/css/portfolio.css
+++ b/portfolio/static/css/portfolio.css
@@ -44,7 +44,7 @@
 
 .nav-link.roulette {
   position: absolute;
-  right: 0;
+  right: 20px;
   top: 23px; }
 
 body {
@@ -229,6 +229,22 @@ body {
 #carousel-container {
   min-height: 200px; }
 
+.roulette-button-container {
+  width: 100%;
+  text-align: center; }
+
+.roulette-text-container {
+  background: #fff8fb;
+  border-radius: 4px;
+  border: 1px solid darkblue;
+  padding: 20px;
+  text-align: left; }
+
+.roulette-image-container {
+  border: 1px solid darkblue; }
+  .roulette-image-container img {
+    width: 100%; }
+
 @media only screen and (max-width: 480px) {
   .nav-list {
     padding: 30px 0; }
@@ -318,7 +334,11 @@ textarea.form-control, .form-group > input.form-control {
 
 .carousel-control.right, .carousel-control.left {
   background-image: none;
-  opacity: 1; }
+  opacity: 1;
+  display: inline-block; }
+
+#roulette-button {
+  margin-bottom: 20px; }
 
 .section {
   background-size: cover;
@@ -443,6 +463,9 @@ img.circle-text.rotate {
 #illustrations-detail-page .image-container:nth-child(2) {
   margin-top: 20px; }
 
+.alternate-roulette {
+  margin-top: 20px; }
+
 p {
   font-family: 'Overpass'; }
 
@@ -517,5 +540,25 @@ a {
 .block-title-container .number {
   border-bottom: 1px solid #f05f5b;
   margin-bottom: 5px; }
+
+.roulette-text-container p {
+  margin-bottom: 0;
+  font-size: 10px; }
+  .roulette-text-container p:nth-child(2) {
+    margin-bottom: -15px; }
+.roulette-text-container .link {
+  margin-top: 10px; }
+  .roulette-text-container .link a {
+    color: #f05f5b; }
+    .roulette-text-container .link a:hover {
+      text-decoration: none; }
+.roulette-text-container .title {
+  font-size: 14px;
+  font-style: italic; }
+.roulette-text-container .additional {
+  display: block;
+  padding: 10px 15px 0 15px; }
+.roulette-text-container .date {
+  font-size: 14px; }
 
 /*# sourceMappingURL=portfolio.css.map */
