--- a/portfolio/static/css/components/_containers.scss
+++ b/portfolio/static/css/components/_containers.scss
@@ -261,3 +261,19 @@ body {
     width: 100%;
   }
 }
+
+.social-links-container {
+  width: 100%;
+  text-align: center;
+  margin-top: 30px;
+
+  .icon-container {
+    display: inline-block;
+    margin: 0 10px;
+
+    i {
+      font-size: 25px;
+      color: $pink;
+    }
+  }
+}
