fixed slider props bug

--- a/portfolio/static/css/components/_forms.scss
+++ b/portfolio/static/css/components/_forms.scss
@@ -42,7 +42,7 @@ textarea.form-control, .form-group > input.form-control {
 
 .success-message, .error-message {
   display: none;
-  background: #fff8fb;
+  background: $light-pink;
   margin-top: 10px;
   padding: 5px;
   border-radius: 4px;
