--- a/portfolio/static/css/components/_containers.scss
+++ b/portfolio/static/css/components/_containers.scss
@@ -57,7 +57,7 @@ body {
   position: absolute;
   top: -17px;
   right: 7px;
-  background: #fff8fb;
+  background: $light-pink;
   padding: 5px;
   border-radius: 4px;
   z-index: 1;
@@ -108,10 +108,10 @@ body {
 }
 
 @media screen and (max-width: 1199px) and (min-width: 992px) {
-    .sub-container {
-      background-position: -260px;
-    }
+  .sub-container {
+    background-position: -260px;
   }
+}
 
 @media screen and (max-width: 768px) {
   .sub-container {
@@ -122,7 +122,6 @@ body {
 .object-container {
   padding: 100px 30px;
   text-align: center;
-  font-family: 'Overpass';
   border: 1px solid darkblue;
   position: relative;
 
@@ -246,7 +245,7 @@ body {
 }
 
 .roulette-text-container {
-  background: #fff8fb;
+  background: $light-pink;
   border-radius: 4px;
   border: 1px solid darkblue;
   padding: 20px;
