--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -4,6 +4,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" href="{% static "img/favicon.ico" %}">
 <link rel="stylesheet" href="{% static "libs/bootstrap/css/bootstrap.min.css" %}">
 <link href="https://fonts.googleapis.com/css?family=Overpass:300,300i,400,400i" rel="stylesheet">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
