--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -2,34 +2,35 @@
 {% load static from staticfiles %}
 
 <html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" href="{% static "img/favicon.ico" %}">
-<link rel="stylesheet" href="{% static "libs/bootstrap/css/bootstrap.min.css" %}">
-<link href="https://fonts.googleapis.com/css?family=Overpass:300,300i,400,400i" rel="stylesheet">
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/0.10.0/lodash.min.js"></script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    <head>
+        <title>Gabrielle Harrison</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="{% static "img/favicon.ico" %}">
+        <link rel="stylesheet" href="{% static "libs/bootstrap/css/bootstrap.min.css" %}">
+        <link href="https://fonts.googleapis.com/css?family=Overpass:300,300i,400,400i" rel="stylesheet">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/0.10.0/lodash.min.js"></script>
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-104484958-1', 'auto');
-  ga('send', 'pageview');
-</script>
-</head>
-<body>
-<div id="container">
+          ga('create', 'UA-104484958-1', 'auto');
+          ga('send', 'pageview');
+        </script>
+    </head>
+    <body>
+        <div id="container">
 
-</div>
-<input type="hidden" value="{{ csrf_token }}" id="csrftoken" name="csrftoken">
-{% if prod %}
-    <input type="hidden" value="https://gmharrisonportfolio.s3.amazonaws.com" id="static-url" name="static-url">
-{% elif dev %}
-    <input type="hidden" value="/static/" id="static-url" name="static-url">
-{% endif %}
-{% render_bundle 'main' %}
-</body>
+        </div>
+        <input type="hidden" value="{{ csrf_token }}" id="csrftoken" name="csrftoken">
+        {% if prod %}
+            <input type="hidden" value="https://gmharrisonportfolio.s3.amazonaws.com" id="static-url" name="static-url">
+        {% elif dev %}
+            <input type="hidden" value="/static/" id="static-url" name="static-url">
+        {% endif %}
+        {% render_bundle 'main' %}
+    </body>
 </html>
